--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "argparse": "^2.0.1",
     "commander": "^14.0.2",
     "node-html-parser": "^7.0.1"
   }
